feat: add bot user
