# server/pkg/database/mongodb/incident/operations.go
@@ -10,6 +10,7 @@ import (
 	"go.mongodb.org/mongo-driver/mongo"
 	"go.mongodb.org/mongo-driver/mongo/options"
 
+	"github.com/respondnow/respond/server/config"
 	"github.com/respondnow/respond/server/pkg/constant"
 	"github.com/respondnow/respond/server/pkg/database/mongodb"
 )
@@ -272,20 +273,21 @@ func (i *incidentOperator) Validate(in *Incident) error {
 }
 
 func (i *incidentOperator) GetIncidentTypes() []Type {
-	return []Type{
-		Availability,
-		Latency,
-		Security,
-		Other,
+	resp := make([]Type, 0)
+	for _, incidentType := range config.ServerConfig.IncidentTypes {
+		resp = append(resp, Type(incidentType))
 	}
+
+	return resp
 }
 
 func (i *incidentOperator) GetIncidentSeverities() []Severity {
-	return []Severity{
-		Severity0,
-		Severity1,
-		Severity2,
+	resp := make([]Severity, 0)
+	for severity := range config.ServerConfig.Severities {
+		resp = append(resp, Severity(severity))
 	}
+
+	return resp
 }
 
 func (i *incidentOperator) GetIncidentAttachmentType() []AttachmentType {
@@ -295,19 +297,19 @@ func (i *incidentOperator) GetIncidentAttachmentType() []AttachmentType {
 }
 
 func (i *incidentOperator) GetIncidentStageStatuses() []Status {
-	return []Status{
-		Started,
-		Acknowledged,
-		Investigating,
-		Identified,
-		Mitigated,
-		Resolved,
+	resp := make([]Status, 0)
+	for _, status := range config.ServerConfig.Statuses {
+		resp = append(resp, Status(status))
 	}
+
+	return resp
 }
 
 func (i *incidentOperator) GetIncidentRoles() []RoleType {
-	return []RoleType{
-		IncidentCommander,
-		CommunicationsLead,
+	resp := make([]RoleType, 0)
+	for role := range config.ServerConfig.Roles {
+		resp = append(resp, RoleType(role))
 	}
+
+	return resp
 }
